--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,7 @@
 ---
-title: "My Website"
 ---
 
-Hello, Website!
+<link rel="stylesheet" href="styles.css" type="text/css">
+
+<img src="images/alex-ryan.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left">
+
