--- a/datascienceinterviewquestions.Rmd
+++ b/datascienceinterviewquestions.Rmd
@@ -2,7 +2,7 @@
 title: "Data Science Interview Questions (and Answers)"
 ---
 
-Preparation for a data scientist interview can be challenging. It seems the questions can come from a infinite chain, from a vast collection of content. But the important part to remember this list is finite, and can be gamed. By learning these questions, you will imbue yourself with the foundational structure, you will be learning what is important to the field.
+Preparation for a data scientist interview can be challenging. It seems the questions can come from a infinite chain, from a vast collection of content, in a variety of different subfields. But the important part to remember this list is finite, and can be gamed. By learning these questions, you will imbue yourself with the foundational structure of data science, you will be learning what is important to the field.
 
 # Statistics
 
