--- a/logisticreport.Rmd
+++ b/logisticreport.Rmd
@@ -3,3 +3,9 @@ title: "Logistic model of Kidney Transplant success rate"
 ---
 
 Modeled the probability of Kidney Transplant success using Logistic Regression
+
+
+You can find a copy of the paper [here](logisticreport.pdf)
+
+
+![](logisticmodel.jpg)
